<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">秘友</string>
    <string name="fogetpassword">忘记密码？</string>
    <string name="title_activity_main">秘友</string>
    <string name="action_all_mibo">全部</string>
    <string name="action_hot_mibo">热门</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>

    <string-array name="spinner_list_array">
        <item>全部</item>
        <item>热门</item>
        <item>秘圈</item>
    </string-array>

    <string name="action_menu_create_tiezi">发帖</string>
    <string name="action_menu_message">消息</string>
    <string name="action_menu_refresh">刷新</string>
    <string name="action_menu_search">搜索</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_create_tiezi">发帖</string>
    <string name="takephoto">拍照</string>
    <string name="gallary">相册</string>
    <string name="ResourceModel">素材模板</string>
    <string name="title_activity_show_image">图片浏览</string>
    <string name="mitness">模糊</string>
    <string name="brightness">亮度</string>
    <string name="returntext">返回</string>
    <string name="adjust_effect">调整效果</string>
    <string name="emotion">表情</string>
    <string name="create_tiezi_hint">写下今天的秘话……</string>
    <string name="anonymous">匿名</string>
    <string name="time">时间</string>
    <string name="favor">赞</string>
    <string name="contact">聊天</string>
    <string name="comment">评论</string>
    <string name="update_headview_tips">下来刷新</string>
    <string name="update_headview_time">最近更新于</string>

</resources>
