<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.luluandroid.miyou.MainActivity" >

    <item
        android:id="@+id/actions_menu_kuozhan"
        android:icon="@drawable/ic_action_select_all"
        android:orderInCategory="2"
        android:title="扩展"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/actions_menu_create_tiezi"
                style="@style/actionbar_icons"
                android:icon="@drawable/ic_action_edit"
                android:orderInCategory="21"
                android:title="@string/action_menu_create_tiezi"
                app:showAsAction="always"/>
            <item
                android:id="@+id/actions_menu_message"
                style="@style/actionbar_icons"
                android:icon="@drawable/ic_action_email"
                android:orderInCategory="22"
                android:title="@string/action_menu_message"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/actions_menu_search"
                android:actionViewClass="android.Widget.SearchView"
                android:icon="@drawable/ic_action_search"
                android:orderInCategory="23"
                android:title="@string/action_menu_search"
                app:showAsAction="always|withText"/>
        </menu>
    </item>
    <item
        android:id="@+id/actions_menu_refresh"
        style="@style/actionbar_icons"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:title="@string/action_menu_refresh"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>